# nxsadmin

./: nxsadmin-desktop-path.patch  nxsadmin.desktop  nxsadmin.spec
.gear/: rules
nxsadmin/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  config.h.in  configure  configure.in  nxsadmin.console.app  nxsadmin.desktop
nxsadmin/po/: LINGUAS  POTFILES.in  ru_RU.po  uk_UA.po
nxsadmin/src/: Makefile.am  Makefile.in  main.cc  sa_main_window.cc  sa_main_window.h  sa_process_window.cc  sa_process_window.h  sa_sys_utils.cc  sa_sys_utils.h
